[metadata]
name = nscs
version = 2013
summary = NSCS(Network Service Configuration Stack) Application services
description-file =
    README.rst
author = Freescale
author-email = b39209@freescale.com
home-page = http://www.freescale.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nscs
data_files =
    nscs/etc/nscsas =
        nscs/etc/nscsas/nscsas.conf
        nscs/etc/nscsas/nscs.conf
        nscs/etc/nscsas/consumer.conf
    nscs/etc/crd =
        nscs/etc/crd/api-paste.ini
        nscs/etc/crd/nscs.conf
        nscs/etc/crd/nscsclient.conf
        nscs/etc/crd/policy.json
        nscs/etc/crd/rootwrap.conf
    nscs/etc/crd/rootwrap.d =
        nscs/etc/crd/rootwrap.d/debug.filters
        nscs/etc/crd/rootwrap.d/iptables-firewall.filters

[entry_points]
nscs.nscsas.storage =
    log = nscs.nscsas.storage.impl_log:LogStorage
    mysql = nscs.nscsas.storage.impl_sqlalchemy:SQLAlchemyStorage
    sqlite = nscs.nscsas.storage.impl_sqlalchemy:SQLAlchemyStorage

console_scripts =
    nscsas-api = nscs.nscsas.api.app:start
    nscsas-dbsync = nscs.nscsas.storage:dbsync
    nscs-agent = nscs.crd_consumer.crd_consumer:main
    sdnoscfg = nscs.crd_consumer.client.shell:main
    nscs-server = nscs.crd.server:main
    nscs-relay-agent = nscs.crd_relay_agent.crd_relay_agent:main
    nscs = nscs.crdclient.shell:main


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nscs/locale/nscs.pot

[compile_catalog]
directory = nscs/locale
domain = nscs

[update_catalog]
domain = nscs
output_dir = nscs/locale
input_file = nscs/locale/nscs.pot
