[metadata]
name = nscs
version = 2013
summary = NSCS(Network Service Configuration Stack) Application services
description-file =
    README.rst
author = Freescale
author-email = b39209@freescale.com
home-page = http://www.freescale.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nscs
    
data_files =
    etc/nscsas =
        etc/nscsas/nscsas.conf
        etc/nscsas/nscs.conf
        etc/nscsas/consumer.conf
    etc/nscsas/modules =
	etc/nscsas/modules/README
    etc/nscsas/consumer_modules =
	etc/nscsas/consumer_modules/README
    etc/crd =
        etc/crd/api-paste.ini
        etc/crd/nscs.conf
        etc/crd/nscsclient.conf
        etc/crd/policy.json
        etc/crd/rootwrap.conf
    etc/crd/modules = 
	etc/crd/modules/README
    etc/crd/rootwrap.d =
        etc/crd/rootwrap.d/debug.filters
        etc/crd/rootwrap.d/iptables-firewall.filters

[entry_points]
nscsas.storage =
    log = nscs.nscsas.storage.impl_log:LogStorage
    mysql = nscs.nscsas.storage.impl_sqlalchemy:SQLAlchemyStorage
    sqlite = nscs.nscsas.storage.impl_sqlalchemy:SQLAlchemyStorage

console_scripts =
    nscsas-api = nscs.nscsas.api.app:start
    nscsas-dbsync = nscs.nscsas.storage:dbsync
    nscs-agent = nscs.crd_consumer.crd_consumer:main
    sdnoscfg = nscs.crd_consumer.client.shell:main
    nscs-server = nscs.crdservice.server:main
    nscs-relay-agent = nscs.crd_relay_agent.crd_relay_agent:main
    nscs = nscs.crdclient.shell:main


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nscs/locale/nscs.pot

[compile_catalog]
directory = nscs/locale
domain = nscs

[update_catalog]
domain = nscs
output_dir = nscs/locale
input_file = nscs/locale/nscs.pot
